--- a/VanNotes/VanNotes/AppShell.xaml
+++ b/VanNotes/VanNotes/AppShell.xaml
@@ -2,10 +2,10 @@
 <Shell xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VanNotes.AppShell"
-       xmlns:views="clr-namespase:Nts.Views">
+       xmlns:views="clr-namespace:Notes.Views">
 
     <TabBar>
-        <ShellContent Title="Notes" Icon="">
+        <ShellContent Title="Notes" Icon="Edit Property_32px.png" ContentTemplate="">
             
         </ShellContent>
     </TabBar>
