--- a/VanNotes/VanNotes/AppShell.xaml
+++ b/VanNotes/VanNotes/AppShell.xaml
@@ -5,8 +5,12 @@
        xmlns:views="clr-namespace:Notes.Views">
 
     <TabBar>
-        <ShellContent Title="Notes" Icon="Edit Property_32px.png" ContentTemplate="">
+        <ShellContent Title="Notes" Icon="Edit Property_32px.png" ContentTemplate="{DataTemplate views:NotesPage}">
             
+        </ShellContent>
+
+        <ShellContent Title="About" Icon="Connected_32px.png" ContentTemplate="{DataTemplate views:AboutPage}">
+
         </ShellContent>
     </TabBar>
 
